# pace2026optil-judges

./: Cargo.toml  README.md
src/: check.rs  lib.rs  optil_args.rs
testcases/tiny01/: infeasible.sol  instance.nw  opt.sol  subopt.sol  syntax_error.sol
tests/: integration.rs  tiny_solver.py
